added yazi configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,4 +16,6 @@ set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
 
 set-option -g status-position bottom
 set-option -g default-shell /bin/bash
+set-option -g escape-time 0
+
 setw -g mode-keys vi
