--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,13 +9,16 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set -g @plugin 'tmux-plugins/tpm'
-run '~/.tmux/plugins/tpm/tpm'
 
 set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+set -g @tmux-gruvbox 'dark256' # or 'dark256', 'light', 'light256'
 
 set-option -g status-position bottom
-set-option -g default-shell /bin/bash
+# set-option -g default-shell /bin/bash
 set-option -g escape-time 0
 
 setw -g mode-keys vi
+
+run -b '~/.tmux/plugins/tpm/tpm'
+
+# on errors with tpm run: bash ~/.tmux/plugins/tpm/tpm
